--- a/constrained_spans.tex
+++ b/constrained_spans.tex
@@ -222,7 +222,7 @@ For a proof that this really is a Segal space, the reader is once again referred
 
   The quasicategory $\Span^{\simeq}(\category{C})$ is categorically equivalent to the category $\category{C}$ from which we started. More specifically, there exists a weak categorical equivalence $\category{C} \to \Span^{\simeq}(\category{C})$. We will now construct this map. 
 
-  Note that for each $n \geq 0$ there is a retraction of posets
+  For each $n \geq 0$ there is a retraction of posets
   \begin{equation*}
     [n] \hookrightarrow \Sigma_{n} \twoheadrightarrow [n],
   \end{equation*}
