--- a/mystyle.sty
+++ b/mystyle.sty
@@ -155,6 +155,8 @@
 % Dirty typesetting hacks
 \newcommand{\lmarkedparen}{\mathrlap{(}\text{\textbf{-}}}
 \newcommand{\rmarkedparen}{\mathrlap{)}\text{\textbf{-}}}
+\newcommand{\sdots}{\mathrlap{{}\ddots{}} {}\iddots{}}
+\newcommand{\respace}[1]{\phantom{00}\smash{\kern-1em#1}}
 
 
 % Second level of list uses empty bullets
