--- a/mystyle.sty
+++ b/mystyle.sty
@@ -151,6 +151,7 @@
 \newcommand{\eg}{\twoheadrightarrow}
 \newcommand{\updag}{^{\dagger}}
 \newcommand{\downdag}{_{\dagger}}
+\newcommand{\cone}{^{\vartriangleleft}}
 
 % Dirty typesetting hacks
 \newcommand{\lmarkedparen}{\mathrlap{(}\text{\textbf{-}}}
